[project]
name = "algorithm-ps"
version = "0.1.0"
description = ""
authors = [
    {name = "nno0obb",email = "nno0obb@kakao.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-subtests (>=0.14.1,<0.15.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
