[project]
name = "algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "attrs==25.3.0 ; python_full_version >= '3.12'",
    "beautifulsoup4==4.13.4 ; python_full_version >= '3.12'",
    "certifi==2025.4.26 ; python_full_version >= '3.12'",
    "charset-normalizer==3.4.2 ; python_full_version >= '3.12'",
    "colorama==0.4.6 ; python_full_version >= '3.12' and sys_platform == 'win32'",
    "idna==3.10 ; python_full_version >= '3.12'",
    "iniconfig==2.1.0 ; python_full_version >= '3.12'",
    "jinja2==3.1.6 ; python_full_version >= '3.12'",
    "markupsafe==3.0.2 ; python_full_version >= '3.12'",
    "packaging==25.0 ; python_full_version >= '3.12'",
    "pluggy==1.6.0 ; python_full_version >= '3.12'",
    "pygments==2.19.1 ; python_full_version >= '3.12'",
    "pytest==8.4.0 ; python_full_version >= '3.12'",
    "pytest-benchmark>=5.2.3",
    "pytest-subtests==0.14.1 ; python_full_version >= '3.12'",
    "requests==2.32.3 ; python_full_version >= '3.12'",
    "soupsieve==2.7 ; python_full_version >= '3.12'",
    "typing-extensions==4.14.0 ; python_full_version >= '3.12'",
    "urllib3==2.4.0 ; python_full_version >= '3.12'",
]
